Spring Boot 2.7.0 to 3.1.1 (#29)
The following major changes have been made
- Spring Boot 2.7 to 3.1
- Gradle 7.4 to 8.2
- Java 11 to 17
- Eclipse to VS Code ( DevContainer )
- Language changed from Japanese to English